# nock

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
crates/hoonc/bootstrap/: hoonc.jam
crates/hoonc/hoon/: kernel.hoon
crates/hoonc/hoon/hoon-deps/lib/: wrapper.hoon
crates/nockapp/: Cargo.toml
crates/nockapp/src/: lib.rs
crates/nockapp/src/kernel/: boot.rs  form.rs
crates/nockapp/src/nockapp/: mod.rs
crates/nockchain/: Cargo.toml
crates/nockchain-wallet/: Cargo.toml
crates/nockchain-wallet/src/: main.rs
crates/nockchain/src/: config.rs  lib.rs  mining.rs
crates/nockvm/rust/nockvm/src/: interpreter.rs  noun.rs  trace.rs
crates/zkvm-jetpack/: Cargo.toml
crates/zkvm-jetpack/src/: hot.rs  utils.rs
crates/zkvm-jetpack/src/form/: belt.rs  melt.rs  mod.rs  poly.rs
crates/zkvm-jetpack/src/hand/: structs.rs
crates/zkvm-jetpack/src/jets/: base_jets.rs  bp_jets.rs  fock_core_jets.rs  mary_jets.rs  memory_table_jets.rs  stark_jets.rs  tip5_jets.rs  tip5_sponge.rs  verifier_jets.rs
hoon/apps/dumbnet/: inner.hoon  miner.hoon
hoon/apps/dumbnet/lib/: consensus.hoon  miner.hoon  pending.hoon  types.hoon
hoon/apps/verifier/: verifier.hoon
hoon/apps/wallet/: wallet.hoon
hoon/common/: pow.hoon  tx-engine-0.hoon  tx-engine-1.hoon  tx-engine.hoon
hoon/common/stark/: prover.hoon
hoon/common/ztd/: eight.hoon  two.hoon
scripts/: benchmark_mining.sh  mine_nock.sh  run_nockchain_miner.sh  run_nockchain_miner_fakenet.sh  run_nockchain_node.sh  run_nockchain_node_fakenet.sh
(+10 files in other folders)
